Add sass, finish first model

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -37,6 +37,15 @@
   }
 }
 
-Canvas {
-  height: 1200px;
+.picker {
+  text-align: right;
+  position: fixed;
+  bottom: 24px;
+  right: 24px;
+
+  .text {
+    font-size: 36px;
+    font-weight: 700;
+    // background: white;
+  }
 }
